AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/components/sas-business-rules-services/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /businessRules/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-business-rules
    sas.com/admin: namespace
  name: sas-business-rules
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-business-rules
          servicePort: 80
        path: /businessRules

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /referenceData/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-reference-data
    sas.com/admin: namespace
  name: sas-reference-data
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-reference-data
          servicePort: 80
        path: /referenceData
